--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -1,17 +1,17 @@
 sp:
   user-service:
-     users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"}]"
+    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"},{\"id\":99, \"username\":\"aaa\",\"password\":\"111\"}]"
 
 spring:
   application:
-    name: user-service
+        name: user-service
   cloud:
       config:
-        override-none: true
+          override-none: true
         
         
 server:
-  port: 8101
+       port: 8101
 
   
 eureka:
@@ -19,9 +19,9 @@ eureka:
     service-url:
       defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
 
-feign:
-  hystrix:
-    enabled:  true.
+feign:   
+    hystrix:
+          enabled:  true.
 
 hystrix:
   dashboard:
